@startuml

title __MODEL's Class Diagram__\n


      class model.Konkurrence {
          ~ konkurrenceDato : LocalDate
          ~ konkurrenceID : int
          ~ konkurrenceNavn : String
          + Konkurrence()
          + gem()
          + getKonkurrenceDato()
          + getKonkurrenceID()
          + getKonkurrenceNavn()
          + setKonkurrenceDato()
          + setKonkurrenceID()
          + setKonkurrenceNavn()
          + toString()
      }



      class model.KonkurrenceResultat {
          - konkurrenceResultatID : int
          - tid : LocalTime
          + KonkurrenceResultat()
          + setKonkurrenceResultatID()
          + setTid()
      }

  


      enum Svoemmediciplin {
        brystsvoemning
        butterfly
        crawl
        rygcrawl
      }

  


      class model.Konkurrencer {
          {static} + konkurrenceMap : HashMap<Integer, Konkurrence>
          + Konkurrencer()
          + toString()
      }



      class model.KonkurrrenceMedlem {
          - Traener : String
          + KonkurrrenceMedlem()
      }


  

      class model.Kontingenter {
          ~ juniorKontingent : int
          ~ over60Kontingent : int
          ~ passivKontingent : int
          ~ seniorKontingent : int
          {static} + indbetalKontingent()
          + udregnKontingent()
          + udskrivKontingent()
          {static} + udskrivRestanceListe()
      }


      class model.Medlem {
          - alder : int
          - balance : int
          - efterNavn : String
          - email : String
          - forNavn : String
          - medlemID : int
          - tlfNr : String
          + Medlem()
          + balanceToString()
          + gem()
          + getAlder()
          + getAldersKlasse()
          + getBalance()
          + getEfterNavn()
          + getEmail()
          + getForNavn()
          + getKoen()
          + getMedlemID()
          + getStatus()
          + getTlfNr()
          + kortToString()
          + setBalance()
          + setMedlemID()
          + toString()
      }

      enum AldersKlasse {
        junior
        senior
      }

  


      enum Koen {
        kvinde
        mand
      }

      enum Status {
        aktiv
        passiv
      }

      class model.MedlemsLister {
          {static} + medlemMap : HashMap<Integer, Medlem>
          + KortToString()
          + toString()
      }

  

  model.KonkurrenceResultat o-- model.KonkurrenceResultat.Svoemmediciplin : svoemmediciplin
  model.KonkurrenceResultat o-- model.Konkurrence : konkurrence
  model.KonkurrenceResultat o-- model.Medlem : medlem
  model.KonkurrenceResultat +-down- model.KonkurrenceResultat.Svoemmediciplin
  model.KonkurrrenceMedlem -up-|> model.Medlem
  model.Medlem o-- model.Medlem.AldersKlasse : AldersKlasse
  model.Medlem o-- model.Medlem.Koen : koen
  model.Medlem o-- model.Medlem.Status : status
  model.Medlem +-down- model.Medlem.AldersKlasse
  model.Medlem +-down- model.Medlem.Koen
  model.Medlem +-down- model.Medlem.Status


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
